--- a/style.css
+++ b/style.css
@@ -18,10 +18,9 @@ img {
 body {
     padding-left: 1rem;
     padding-right: 1rem;
-    border-left: 2px solid azure;
-    border-right: 2px solid azure;
+    border: 2px solid azure;
     margin-left: auto;
     margin-right: auto;
-    height: auto;
+    height: 100%;
     width: 75%;
 }
